# distributed_logging

./: .gitignore  CMakeLists.txt  README.md
include/: network-utils.h  thread-pool.h  utils.h
src/: aggregator.cpp  client.cpp  network-utils.cpp  server.cpp  utils.cpp  utils.h
